[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundzwatch"
version = "1.0.1"
description = "Python SDK for FundzWatch.ai - Real-time business event intelligence for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Fundz Inc.", email = "support@fundz.net"}
]
keywords = [
    "fundzwatch", "business-events", "ai-agents", "lead-generation",
    "sales-intelligence", "funding", "acquisitions", "crewai", "langchain"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.80.0"]
langchain = ["langchain-core>=0.3.0"]
all = ["crewai>=0.80.0", "langchain-core>=0.3.0"]

[project.urls]
Homepage = "https://fundzwatch.ai"
Documentation = "https://fundzwatch.ai/docs"
Repository = "https://github.com/fundz/fundzwatch-python"
Issues = "https://github.com/fundz/fundzwatch-python/issues"

[tool.setuptools.packages.find]
where = ["src"]
